--- a/src/core/_text.sass
+++ b/src/core/_text.sass
@@ -124,11 +124,11 @@ h6, .h6
 
 
 // Font sizes
-@include prop-by-steps(fs, (font-size), 'rem', 2, 0.1)
-@include prop-by-steps(fs, (font-size), 'rem', 5, 0.5, 2)
+@include prop-by-steps(fs, (font-size), 'rem', 2, 0.1, 0.4)
+@include prop-by-steps(fs, (font-size), 'rem', 4, 0.5, 2)
 
 // Line heights
-@include prop-by-steps(lh, (line-height), 'rem', 2, 0.1)
-@include prop-by-steps(lh, (line-height), 'rem', 5, 0.5, 2)
-@include prop-by-steps(lh, (line-height), 'em', 2, 0.25, 0.5)
+@include prop-by-steps(lh, (line-height), 'rem', 2, 0.1, 0.4)
+@include prop-by-steps(lh, (line-height), 'rem', 4, 0.5, 2)
+@include prop-by-steps(lh, (line-height), 'em', 2, 0.1, 0.4)
 
